// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match snapshot with largeViewport 1`] = `
<Headroom
  height={180}
  onStickyTopChanged={[Function]}
  pinStart={0}
  positionStickyDisabled={false}
  scrollHeight={90}
>
  <Header__HeaderContainer>
    <Header__Row
      hasTitle={false}
    >
      <HeaderLogo
        alt="IntegreatTestCms"
        link="/random_route"
        src="/app-logo.png"
        theme={
          Object {
            "colors": Object {
              "backgroundAccentColor": "#fafafa",
              "backgroundColor": "#ffffff",
              "textColor": "#000000",
              "textDecorationColor": "#c7c7c7",
              "textDisabledColor": "#d0d0d0",
              "textSecondaryColor": "#585858",
              "themeColor": "#fbda16",
              "tunewsThemeColor": "#007aa8",
              "tunewsThemeColorLight": "rgba(0, 122, 168, 0.4)",
            },
            "dimensions": Object {
              "native": Object {
                "categoryListItem": Object {
                  "iconSize": 40,
                  "margin": 10,
                },
                "headerHeight": 60,
                "modalHeaderHeight": 40,
              },
              "web": Object {
                "headerHeightLarge": 90,
                "headerHeightSmall": 70,
                "maxWidth": 1100,
                "minMaxWidth": "screen and (min-width: 1100px)",
                "smallViewport": "(max-width: 750px)",
                "toolbarWidth": 125,
              },
            },
            "fonts": Object {
              "arabicWebviewFontFamilies": "'OpenSans', 'Lateef', sans-serif",
              "contentFontBold": "OpenSans-Bold",
              "contentFontFamily": "'Open Sans', 'Lateef', sans-serif",
              "contentFontRegular": "OpenSans-Regular",
              "contentFontSize": "0.95rem",
              "contentLineHeight": 1.4,
              "decorativeFontBold": "Raleway-Bold",
              "decorativeFontFamily": "'Raleway', 'Lateef', sans-serif",
              "decorativeFontRegular": "Raleway-Regular",
              "decorativeFontSize": "0.95rem",
              "decorativeLineHeight": 1.3,
              "fontSizeAdjust": 0.55,
              "standardParagraphMargin": "0.75rem",
              "subTitleFontSize": "1.8rem",
              "webviewFontFamilies": "'OpenSans', sans-serif",
            },
            "helpers": Object {
              "removeLinkHighlighting": "color: inherit; text-decoration: none;",
            },
          }
        }
      />
      <HeaderTitle
        theme={
          Object {
            "colors": Object {
              "backgroundAccentColor": "#fafafa",
              "backgroundColor": "#ffffff",
              "textColor": "#000000",
              "textDecorationColor": "#c7c7c7",
              "textDisabledColor": "#d0d0d0",
              "textSecondaryColor": "#585858",
              "themeColor": "#fbda16",
              "tunewsThemeColor": "#007aa8",
              "tunewsThemeColorLight": "rgba(0, 122, 168, 0.4)",
            },
            "dimensions": Object {
              "native": Object {
                "categoryListItem": Object {
                  "iconSize": 40,
                  "margin": 10,
                },
                "headerHeight": 60,
                "modalHeaderHeight": 40,
              },
              "web": Object {
                "headerHeightLarge": 90,
                "headerHeightSmall": 70,
                "maxWidth": 1100,
                "minMaxWidth": "screen and (min-width: 1100px)",
                "smallViewport": "(max-width: 750px)",
                "toolbarWidth": 125,
              },
            },
            "fonts": Object {
              "arabicWebviewFontFamilies": "'OpenSans', 'Lateef', sans-serif",
              "contentFontBold": "OpenSans-Bold",
              "contentFontFamily": "'Open Sans', 'Lateef', sans-serif",
              "contentFontRegular": "OpenSans-Regular",
              "contentFontSize": "0.95rem",
              "contentLineHeight": 1.4,
              "decorativeFontBold": "Raleway-Bold",
              "decorativeFontFamily": "'Raleway', 'Lateef', sans-serif",
              "decorativeFontRegular": "Raleway-Regular",
              "decorativeFontSize": "0.95rem",
              "decorativeLineHeight": 1.3,
              "fontSizeAdjust": 0.55,
              "standardParagraphMargin": "0.75rem",
              "subTitleFontSize": "1.8rem",
              "webviewFontFamilies": "'OpenSans', sans-serif",
            },
            "helpers": Object {
              "removeLinkHighlighting": "color: inherit; text-decoration: none;",
            },
          }
        }
      />
      <Header__ActionBar>
        <HeaderActionItemLink
          href="/random_route"
          iconSrc="icon"
          key="0"
          text="text"
        />
      </Header__ActionBar>
    </Header__Row>
    <Header__Row>
      <Header__NavigationBar>
        <HeaderNavigationItem
          active={true}
          href="/another_route"
          icon="icon.jpg"
          key="0"
          text="text1"
          tooltip="tooltip1"
        />
      </Header__NavigationBar>
    </Header__Row>
  </Header__HeaderContainer>
</Headroom>
`;

exports[`Header should match snapshot with smallViewport 1`] = `
<Headroom
  height={140}
  onStickyTopChanged={[Function]}
  pinStart={0}
  positionStickyDisabled={false}
  scrollHeight={70}
>
  <Header__HeaderContainer>
    <Header__Row
      hasTitle={false}
    >
      <HeaderLogo
        alt="IntegreatTestCms"
        link="/random_route"
        src="/app-logo.png"
        theme={
          Object {
            "colors": Object {
              "backgroundAccentColor": "#fafafa",
              "backgroundColor": "#ffffff",
              "textColor": "#000000",
              "textDecorationColor": "#c7c7c7",
              "textDisabledColor": "#d0d0d0",
              "textSecondaryColor": "#585858",
              "themeColor": "#fbda16",
              "tunewsThemeColor": "#007aa8",
              "tunewsThemeColorLight": "rgba(0, 122, 168, 0.4)",
            },
            "dimensions": Object {
              "native": Object {
                "categoryListItem": Object {
                  "iconSize": 40,
                  "margin": 10,
                },
                "headerHeight": 60,
                "modalHeaderHeight": 40,
              },
              "web": Object {
                "headerHeightLarge": 90,
                "headerHeightSmall": 70,
                "maxWidth": 1100,
                "minMaxWidth": "screen and (min-width: 1100px)",
                "smallViewport": "(max-width: 750px)",
                "toolbarWidth": 125,
              },
            },
            "fonts": Object {
              "arabicWebviewFontFamilies": "'OpenSans', 'Lateef', sans-serif",
              "contentFontBold": "OpenSans-Bold",
              "contentFontFamily": "'Open Sans', 'Lateef', sans-serif",
              "contentFontRegular": "OpenSans-Regular",
              "contentFontSize": "0.95rem",
              "contentLineHeight": 1.4,
              "decorativeFontBold": "Raleway-Bold",
              "decorativeFontFamily": "'Raleway', 'Lateef', sans-serif",
              "decorativeFontRegular": "Raleway-Regular",
              "decorativeFontSize": "0.95rem",
              "decorativeLineHeight": 1.3,
              "fontSizeAdjust": 0.55,
              "standardParagraphMargin": "0.75rem",
              "subTitleFontSize": "1.8rem",
              "webviewFontFamilies": "'OpenSans', sans-serif",
            },
            "helpers": Object {
              "removeLinkHighlighting": "color: inherit; text-decoration: none;",
            },
          }
        }
      />
      <Header__ActionBar>
        <HeaderActionItemLink
          href="/random_route"
          iconSrc="/icon.jpg"
          key="0"
          text="random route"
        />
      </Header__ActionBar>
    </Header__Row>
    <Header__Row>
      <Header__NavigationBar>
        <HeaderNavigationItem
          active={true}
          href="/another_route"
          icon="icon.jpg"
          key="0"
          text="text1"
          tooltip="tooltip1"
        />
      </Header__NavigationBar>
    </Header__Row>
  </Header__HeaderContainer>
</Headroom>
`;
